--- a/pre_lectures.ipynb
+++ b/pre_lectures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "68e6bb9e",
    "metadata": {},
    "outputs": [],
@@ -25,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "d33bc299",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('riiid-test-answer-prediction/train.csv', nrows=10**7)\n",
+    "train = pd.read_csv('riiid-test-answer-prediction/train.csv', nrows=10**4)\n",
     "test = pd.read_csv(\"riiid-test-answer-prediction/example_test.csv\")\n",
     "lectures = pd.read_csv(\"riiid-test-answer-prediction/lectures.csv\")\n",
     "questions = pd.read_csv(\"riiid-test-answer-prediction/questions.csv\")"
@@ -60,6 +60,207 @@
     "tag: one tag codes for the lecture. The meaning of the tags will not be provided, but these codes are sufficient for clustering the lectures together.\n",
     "type_of: brief description of the core purpose of the lecture\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a5c60a8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "418"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lecture_id: foreign key for the train/test content_id column, when the content type is lecture (1).\n",
+    "# 각각의 강의번호 (train/test에 있는 content_id의 외래키)\n",
+    "\n",
+    "lectures.lecture_id.nunique() # 418개의 강의"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "626cb185",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 1, 6, 2, 7, 3, 4], dtype=int64)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# part: top level category code for the lecture.\n",
+    "#part : 단원\n",
+    "lectures.part.unique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "dfa856a7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5    143\n",
+       "6     83\n",
+       "2     56\n",
+       "1     54\n",
+       "7     32\n",
+       "4     31\n",
+       "3     19\n",
+       "Name: part, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lectures.part.value_counts() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7b0ac3f8",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      159\n",
+       "1       70\n",
+       "2       45\n",
+       "3       79\n",
+       "4      156\n",
+       "      ... \n",
+       "413      8\n",
+       "414    113\n",
+       "415     24\n",
+       "416    142\n",
+       "417     82\n",
+       "Name: tag, Length: 418, dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lectures.tag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "02dc0ad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lecture_id</th>\n",
+       "      <th>tag</th>\n",
+       "      <th>part</th>\n",
+       "      <th>type_of</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>16736</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>concept</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     lecture_id  tag  part  type_of\n",
+       "202       16736   40     1  concept"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tag: one tag codes for the lecture. The meaning of the tags will not be provided, \n",
+    "#      but these codes are sufficient for clustering the lectures together.\n",
+    "# 강의를 위한 코드 넘버링\n",
+    "\n",
+    "lectures[lectures.tag==40]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "2c0d5932",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "concept             222\n",
+       "solving question    186\n",
+       "intention             7\n",
+       "starter               3\n",
+       "Name: type_of, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# type_of: brief description of the core purpose of the lecture\n",
+    "\n",
+    "lectures.type_of.value_counts()\n"
    ]
   },
   {
