시각화 리스트 정리

--- a/pre_train1.ipynb
+++ b/pre_train1.ipynb
@@ -1304,6 +1304,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "'''\r\n",
+    "관계 시각화 정리\r\n",
+    "\r\n",
+    "train.colummns : Index(['row_id', 'timestamp', 'user_id', 'content_id', 'content_type_id',\r\n",
+    "       'task_container_id', 'user_answer', 'answered_correctly',\r\n",
+    "       'prior_question_elapsed_time', 'prior_question_had_explanation'],\r\n",
+    "      dtype='object')\r\n",
+    "\t  \r\n",
+    "1. train - timestamp / 각각 유저의 일수\r\n",
+    "2. train - content_id / 갯수\r\n",
+    "3. train - user_answer / 유저가 선택한 정답 비율\r\n",
+    "4. train - answer_correctly / 유저가 실제로 맞은 수 (1,0)\r\n",
+    "5. train - user_percent(새로 만듦) / 유저가 대답한 수와 실제 맞은 비율 간의 관계\r\n",
+    "6. train - prior_question_elapsed_time / 하나 푸는 데 걸리는 평균 시간(초)\r\n",
+    "7. train - prior_question_had_explanation / 해설지보고 맞은 비율\r\n",
+    "8. train - user_id,answered_correctly / 강의시청 유무별 정답률 \r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "questions.columns : Index(['question_id', 'bundle_id', 'correct_answer', 'part', 'tags'], dtype='object')\r\n",
+    "\r\n",
+    "1. question - tags_select / 어려운태그, 쉬운태그 탑 10\r\n",
+    "2. question - tags_select / 태그당 사용된 횟수\r\n",
+    "3. question - question_id / 파트별 문제수\r\n",
+    "4. question - question_id / 문제의 파트 비율\r\n",
+    "5. question - question_id / 파트별 문제수\r\n",
+    "\t- part 파트당 정답률\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "lectures.columns : Index(['lecture_id', 'tag', 'part', 'type_of'], dtype='object')\r\n",
+    "\r\n",
+    "1. lecture - type_of,lecture_id / 강의 파트별 갯수\r\n",
+    "\r\n",
+    "1. train_lecture - part,lecture_id / 학생들이 파트별 시청한 강의 수, 파트별 전체 강의 수\r\n",
+    "2. train_lecture - task_container_id, user_id / 학생들이 task_container_id의 20개 구간별 시청한 강의 수\r\n",
+    "3. train_lecture - task_container_id, user_id / task_container_id 의 최댓값별 학생\r\n",
+    "'''\r\n",
+    "\r\n",
+    "# 우리가 이번 프로젝트에서 한 것 : EDA 기초분석(데이터가 무엇인지, 무엇에 포커스를 맞춰야 하는지 보기 위해) / 전처리(모델에 적합한 데이터 형식을 만들기 위해)\r\n",
+    "# => 하나하나 문제 맞추는 거 예측 => 전체 토익 200문제 => 점수 예상  "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "source": [
     "train.info()"
@@ -1764,6 +1813,7 @@
    "cell_type": "code",
    "execution_count": 36,
    "source": [
+    "# ??\r\n",
     "content_percent = content_percent.query('Answers <= 25000').sample(n=200, random_state=1) # 이해 필요\r\n",
     "\r\n",
     "plt.figure(figsize=(12,6))\r\n",
@@ -2040,56 +2090,6 @@
      "metadata": {
       "needs_background": "light"
      }
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "---"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 264,
-   "source": [
-    "train.columns"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Index(['row_id', 'timestamp', 'user_id', 'content_id', 'content_type_id',\n",
-       "       'task_container_id', 'user_answer', 'answered_correctly',\n",
-       "       'prior_question_elapsed_time', 'prior_question_had_explanation'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 264
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 265,
-   "source": [
-    "train2."
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000023BD85F18E0>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 265
     }
    ],
    "metadata": {}
@@ -4401,6 +4401,13 @@
    "cell_type": "markdown",
    "source": [
     "---"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 데이터 모델 검증"
    ],
    "metadata": {}
   },
