--- a/pre_train1.ipynb
+++ b/pre_train1.ipynb
@@ -1318,7 +1318,7 @@
     "2. train - content_id / 갯수\r\n",
     "3. train - user_answer / 유저가 선택한 정답 비율\r\n",
     "4. train - answer_correctly / 유저가 실제로 맞은 수 (1,0)\r\n",
-    "5. train - user_percent(새로 만듦) / 유저가 대답한 수와 실제 맞은 비율 간의 관계\r\n",
+    "5. train - user_percent(새로 만듦) / 유저가 문제푼 수와 실제 맞은 비율 간의 관계\r\n",
     "6. train - prior_question_elapsed_time / 하나 푸는 데 걸리는 평균 시간(초)\r\n",
     "7. train - prior_question_had_explanation / 해설지보고 맞은 비율\r\n",
     "8. train - user_id,answered_correctly / 강의시청 유무별 정답률 \r\n",
@@ -1332,7 +1332,7 @@
     "3. question - question_id / 파트별 문제수\r\n",
     "4. question - question_id / 문제의 파트 비율\r\n",
     "5. question - question_id / 파트별 문제수\r\n",
-    "\t- part 파트당 정답률\r\n",
+    "6. question- part 파트당 정답률\r\n",
     "\r\n",
     "\r\n",
     "\r\n",
@@ -4248,9 +4248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 273,
    "source": [
-    "train1[train.answered_correctly != -1].groupby(['content_type_id', 'user_id']).answered_correctly.mean().sort_values()"
+    "train1[train.answered_correctly != -1].groupby(['content_type_id', 'user_id']).answered_correctly.mean()"
    ],
    "outputs": [
     {
@@ -4258,32 +4258,32 @@
      "data": {
       "text/plain": [
        "content_type_id  user_id\n",
-       "0                124        0.233333\n",
-       "                 53842      0.233333\n",
-       "                 45001      0.233333\n",
+       "0                115        0.695652\n",
+       "                 124        0.233333\n",
+       "                 2746       0.578947\n",
+       "                 5382       0.672000\n",
+       "                 8623       0.642202\n",
+       "                 8701       0.588235\n",
+       "                 12741      0.573585\n",
+       "                 13134      0.706356\n",
+       "                 24418      0.690275\n",
        "                 24600      0.340000\n",
        "                 32421      0.466667\n",
-       "                 81429      0.466667\n",
-       "                 81002      0.529412\n",
-       "                 51285      0.545455\n",
-       "                 12741      0.573585\n",
-       "                 2746       0.578947\n",
+       "                 40828      0.630435\n",
        "                 44331      0.587629\n",
-       "                 8701       0.588235\n",
+       "                 45001      0.233333\n",
        "                 46886      0.613636\n",
        "                 50132      0.621622\n",
-       "                 40828      0.630435\n",
-       "                 8623       0.642202\n",
+       "                 51285      0.545455\n",
+       "                 53842      0.233333\n",
+       "                 81002      0.529412\n",
+       "                 81429      0.466667\n",
        "                 91216      0.671397\n",
-       "                 5382       0.672000\n",
-       "                 24418      0.690275\n",
-       "                 115        0.695652\n",
-       "                 13134      0.706356\n",
        "Name: answered_correctly, dtype: float64"
       ]
      },
      "metadata": {},
-     "execution_count": 238
+     "execution_count": 273
     }
    ],
    "metadata": {}
