시각화 한글 변형

--- a/pre_train2.ipynb
+++ b/pre_train2.ipynb
@@ -53,10 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
-    "train1 = pd.read_csv('train1.csv')\r\n",
-    "train1"
+    "train2 = pd.read_csv('train1.csv')\r\n",
+    "train2"
    ],
    "outputs": [
     {
@@ -371,7 +371,75 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 6
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "train2.info()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   Unnamed: 0                      10000 non-null  int64  \n",
+      " 1   row_id                          10000 non-null  int64  \n",
+      " 2   timestamp                       10000 non-null  int64  \n",
+      " 3   user_id                         10000 non-null  int64  \n",
+      " 4   content_id                      10000 non-null  int64  \n",
+      " 5   content_type_id                 10000 non-null  int64  \n",
+      " 6   task_container_id               10000 non-null  int64  \n",
+      " 7   user_answer                     10000 non-null  int64  \n",
+      " 8   answered_correctly              10000 non-null  int64  \n",
+      " 9   prior_question_elapsed_time     10000 non-null  float64\n",
+      " 10  prior_question_had_explanation  10000 non-null  bool   \n",
+      " 11  correct_answer                  9763 non-null   float64\n",
+      " 12  part                            10000 non-null  int64  \n",
+      " 13  tags                            9763 non-null   object \n",
+      " 14  tag                             237 non-null    float64\n",
+      " 15  type_of                         237 non-null    object \n",
+      "dtypes: bool(1), float64(3), int64(10), object(2)\n",
+      "memory usage: 1.2+ MB\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "train2.tag.unique()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ nan, 129.,  40.,  43.,  58.,  99., 164.,  30., 170.,  39.,  19.,\n",
+       "       161., 119.,  62.,  52.,  68.,  65.,  72.,  69., 167.,  44.,  47.,\n",
+       "         6.,  20.,  91., 156., 176., 108., 159., 105.,  34.,  23., 182.,\n",
+       "         4., 179.,  15.,  27.,  70.,  89., 142.,  64., 147.,  57., 133.,\n",
+       "        94., 140.,  82., 106., 128., 136., 151.,  80.,  96., 157.,  25.,\n",
+       "         8., 134.,  61.,  71., 114., 163., 173., 109., 141.,  26.,  49.,\n",
+       "        75., 113.,  79., 132.,  53., 174.,  51., 101.,  90.,   9.,  74.,\n",
+       "        67., 181., 180., 166., 116.,  85.,  73.,  36., 104.,  33.,   1.,\n",
+       "        95.,  14.,   7., 148., 178., 125.,  48.,  55.,  66.,  60., 168.,\n",
+       "        31., 175.,  78.])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
     }
    ],
    "metadata": {}
